added baground colours using css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en"> 
 <body> 
 
-<h1 style="font-size:60px;color:#bf8913;" align="center">Wisest Quotes</h1> 
+  <style>
+    body {
+      background-color: #000000;
+    }
+    </style>
+
+<h1 style="font-size:60px;color:#faf602;" align="center">Wisest Quotes</h1> 
 
 <br><br><br><br> 
 
-<h2 style="color:#bf8913;" align="center" id="quote"> hi </h2> 
+<h2 style="color:#faf602;" align="center" id="quote"> hi </h2> 
 <br><br> 
 
 <div style="text-align: center\"> 
