made first word phrases

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 
 <h1 style="font-size:60px;color:#faf602;" align="center">Wisest Quotes</h1> 
 
-<br><br><br><br> 
+<br><br>
 
 <h2 style="color:#faf602;" align="center" id="quote"> hi </h2> 
 <br><br> 
 
 <div style="text-align: center\"> 
-<img   src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Trollface_non-free.png/220px-Trollface_non-free.png" align="center" alt="smily" width="130" height="142" class="center">
+<img   src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Trollface_non-free.png/220px-Trollface_non-free.png"  alt="smily" width="130" height="142" class="center">
+<br>
+<button onClick="window.location.reload();">New Quote</button>
+
 
 <style>
     img {
@@ -24,7 +27,15 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    button {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
     </style>
+
+
 
 </div>
 </body>
