--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 
   <style>
     body {
-      background-color: #000000;
+      background-image: url("https://images.unsplash.com/photo-1618688259579-54fc3b432a3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+      background-repeat: no-repeat;
+      background-size: 1300px 1000px;
+    
     }
     </style>
 
-<h1 style="font-size:60px;color:#faf602;" align="center">Wisest Quotes</h1> 
+<h1 style="font-size:60px;color:#02e9fa;" align="center">Wisest Quotes</h1> 
 
 <br><br>
 
-<h2 style="color:#faf602;" align="center" id="quote"> hi </h2> 
+<h2 style="color:#02e9fa;" align="center" id="quote"> hi </h2> 
 <br><br> 
 
 <div style="text-align: center\"> 
 <img   src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Trollface_non-free.png/220px-Trollface_non-free.png"  alt="smily" width="130" height="142" class="center">
 <br>
-<button onClick="window.location.reload();">New Quote</button>
+<button onClick="window.location.reload();" width="3000" height="3000">New Quote</button>
 
 
 <style>
