--- a/index.html
+++ b/index.html
@@ -4,32 +4,70 @@
 
   <style>
     body {
-      background-image: url("https://images.unsplash.com/photo-1618688259579-54fc3b432a3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+     
+       background-image: url("https://wallpaperaccess.com/full/1939285.jpg");
       background-repeat: no-repeat;
       background-size: 1300px 1000px;
     
     }
+    mark {
+      background-color: rgba(94, 151, 204, 0.438);
+      color: rgb(251, 255, 0); 
+    }
+
+    h2 {
+  font-size: 35px;
+}
+.button {
+  background-color: #48a39f;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.container {
+  height: 200px;
+  position: relative;
+  
+}
+
+.horizontal-center {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translatex(-50%);
+  transform: translatex(-50%);
+}
     </style>
 
-<h1 style="font-size:60px;color:#02e9fa;" align="center">Wisest Quotes</h1> 
+<h1 style="font-size:60px;color:#fbff00;" align="center"><mark>Wisest Quotes</mark></h1> 
+
 
 <br><br>
 
-<h2 style="color:#02e9fa;" align="center" id="quote"> hi </h2> 
+<h2 style="color:#f7df07;" align="center" id="quote"> hi </h2> 
 <br><br> 
 
+
+
 <div style="text-align: center\"> 
-<img   src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Trollface_non-free.png/220px-Trollface_non-free.png"  alt="smily" width="130" height="142" class="center">
-<br>
-<button onClick="window.location.reload();" width="3000" height="3000">New Quote</button>
+
+ <div class="container">
+    <div class="horizontal-center" 
+
+<button onClick="window.location.reload();"></button>
+
+
+<button class="button" onClick="window.location.reload();" >New Quote</button>
 
 
 <style>
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
 
     button {
       display: block;
