--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <style>
     body {
      
-       background-image: url("https://wallpaperaccess.com/full/1939285.jpg");
+       background-image: url("https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171_960_720.jpg");
       background-repeat: no-repeat;
-      background-size: 1300px 1000px;
+      background-size: cover;
     
     }
     mark {
-      background-color: rgba(94, 151, 204, 0.438);
-      color: rgb(251, 255, 0); 
+      background-color: rgba(138, 81, 162, 0.438);
+      color: rgb(255, 208, 0); 
     }
 
     h2 {
   font-size: 35px;
 }
 .button {
-  background-color: #48a39f;
+  background-color: #8b48a3;
   border: none;
   color: white;
   padding: 15px 32px;
